# resmgr

./: .cproject  .gitignore  .project  README.md
resmgr.common/: CMakeLists.txt  bld_dbg_ntox86_64.bat
resmgr.common/cmake/Modules/: FindResCommon.cmake
resmgr.common/cmake/toolchains/: qnx7_aarch64.cmake  win64_ntox86_64.cmake
resmgr.common/public/: CProgramArgument.hpp  CQnxData.hpp  CQnxResData.hpp  CResourceManager.hpp  CResourceManagerImpl.hpp  CResourceMngFactory.hpp  CommandLine.hpp  CommandLine.ipp
resmgr.common/public/src/: CResourceManager.hpp
resmgr.common/public/src/devctl/: devctl_sample.h
resmgr.common/scripts/: bld_dbg_ntox86_64.bat
resmgr.common/src/: CMakeLists.txt  CMakelists.txt  CResourceManager.cpp  CResourceManager.hpp  CResourceManagerImpl.cpp  CResourceManagerImpl.hpp
resmgr.common/src/devctl/: CMakeLists.txt
resmgr.common/src/error/: AttachErr.hpp  InvalidArgument.hpp
resmgr.common/src/factory/: CMakeLists.txt  CResourceMngFactory.cpp  CResourceMngFactory.hpp
resmgr.common/src/impl/: CMakeLists.txt  CQnxResMgrImpl.cpp  CQnxResMgrImpl.hpp  CQnxResMngImpl.cpp  CQnxResMngImpl.hpp  CUnknownResMngImpl.cpp  CUnknownResMngImpl.hpp
resmgr.common/src/impl/callback/: CQnxCallback.cpp  CQnxCallback.hpp  CQnxCallbackData.cpp  (+1 more)
resmgr.common/src/parser/: CMakeLists.txt  CProgramArgument.cpp  CProgramArgument.hpp  CommandLine.cpp
resmgr.lib.service/: CMakeLists.txt
resmgr.lib.service/cmake/toolchains/: win64_ntox86_64.cmake
resmgr.lib.service/public/: CProxy.hpp
resmgr.lib.service/scripts/: bld_dbg_ntox86_64.bat
resmgr.lib.service/src/: CMakelists.txt
resmgr.lib.service/src/detail/: HelperFunctions.hpp
resmgr.lib.service/src/exceptions/: InvalidFile.hpp
resmgr.lib.service/src/sample/: CMakelists.txt  CProxy.cpp  CProxy.hpp
resmgr.lib.service/test/: CMakeLists.txt
resmgr.lib.service/test/sample/: main.cpp
resmgr.sample/: CMakeLists.txt  bld_dbg_ntox86_64.bat
resmgr.sample/cmake/toolchains/: qnx7_aarch64.cmake  win64_ntox86_64.cmake
resmgr.sample/scripts/: copy_qnx7vm.bat  dbg_bld_ntox86_64.bat  rel_bld_ntox86_64.bat
resmgr.sample/src/: CMakelists.txt  Callback.cpp  Callback.hpp  Editor.cpp  Editor.hpp  main.cpp
resmgr.sample/test/: CMakelists.txt  main.cpp
(+33 files in other folders)
